--- a/frontPage/frontPage.css
+++ b/frontPage/frontPage.css
@@ -8,6 +8,9 @@
     height: 60px;
     background-color: #0f1111;
     color: white;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
 }
 
 .nav-logo {
@@ -15,9 +18,93 @@
     width: 100px;
 }
 
-.logo {
-    background-image: url("amazon-logo.png");
+.logo p {
     background-size: cover;
     height: 50px;
     width: 100%;
+}
+
+.border {
+    border: 2px solid transparent;
+}
+
+.border:hover {
+    border: 2px solid white;
+}
+
+/*box 2 */ 
+.deliver {
+    font-size: 0.8rem;
+    color: #CCCCCC;
+    margin-left: 15px;
+}
+.bd {
+    font-size: 1rem;
+    margin-left: 3px;
+}
+
+.add-icon {
+    display: flex;
+    align-items: center;
+}
+
+/*box 3 */
+
+.nav-search {
+    display: flex;
+    justify-content: space-evenly;
+    width: 920px;
+    height: 40px;
+    border-radius: 4px;
+}
+
+.nav-select {
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+    background-color: #f3f3f3;
+    height: 40px;
+    width: 52px;
+    text-align: center;
+    border: none;
+}
+.nav-input {
+    width: 100%;
+    font-size: 1rem;
+    border: none;
+}
+
+.search-icon {
+    width: 45px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: orange;
+    font-size: 1.3rem;
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+    color: black;
+}
+
+/* box 4 */
+span {
+    font-size: 0.7rem;
+}
+
+.nav-second {
+    font-size: 0.9rem;
+    font-weight: 700;
+}
+
+.nav-search :hover {
+    border: 2px solid orange;
+}
+
+/*Cart box*/ 
+.nav-cart i {
+    font-size: 30px;
+}
+
+.nav-cart{
+    font-size: 0.9rem;
+    font-weight: 700;
 }
